la til hoved elementer.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hallo verden!</h1>
+    <main>
+        <h1>Hallo verden!!</h1>
+        <article>
+            <h2>Problem</h2>
+            <div>
+                <div class="tekst">
+                    <p>Lorem ipsum dolor sit, 
+                        amet consectetur adipisicing elit. 
+                        Numquam atque deserunt vero nostrum alias molestias, 
+                        labore soluta corporis asperiores beatae quam earum natus 
+                        ipsa repellendus ad incidunt tenetur optio sapiente?
+                    </p>
+                </div>
+                <div class="bilde">
+                    <img src="BILDE/problem-bilde.jpeg" alt="Student som sliter">
+                    <span class="bilde_tekst">Mangel på kjennskap</span>
+                </div>
+            </div>
+        </article>
+    </main>
+
+
 </body>
 </html>
