legger til ekstra kode.

--- a/index.html
+++ b/index.html
@@ -11,20 +11,34 @@
     <main>
         <h1>Hallo verden!!</h1>
         <article>
-            <h2>Problem</h2>
-            <div>
-                <div class="tekst">
-                    <p>Lorem ipsum dolor sit, 
-                        amet consectetur adipisicing elit. 
-                        Numquam atque deserunt vero nostrum alias molestias, 
-                        labore soluta corporis asperiores beatae quam earum natus 
-                        ipsa repellendus ad incidunt tenetur optio sapiente?
-                    </p>
-                </div>
-                <div class="bilde">
-                    <img src="BILDE/problem-bilde.jpeg" alt="Student som sliter">
-                    <span class="bilde_tekst">Mangel på kjennskap</span>
-                </div>
+            <div class="tekst">
+                <h2>Problem</h2>
+                <p>Lorem ipsum dolor sit, 
+                    amet consectetur adipisicing elit. 
+                    Numquam atque deserunt vero nostrum alias molestias, 
+                    labore soluta corporis asperiores beatae quam earum natus 
+                    ipsa repellendus ad incidunt tenetur optio sapiente?
+                </p>
+            </div>
+            <div class="bilde">
+                <img src="BILDE/problem-bilde.jpeg" alt="Student som sliter">
+                <p class="bilde_tekst">Mangel på kjennskap</p>
+            </div>
+        </article>
+
+        <article>
+            <div class="tekst">
+                <h2>Løsning</h2>
+                <p>Lorem ipsum dolor sit, 
+                    amet consectetur adipisicing elit. 
+                    Numquam atque deserunt vero nostrum alias molestias, 
+                    labore soluta corporis asperiores beatae quam earum natus 
+                    ipsa repellendus ad incidunt tenetur optio sapiente?
+                </p>
+            </div>
+            <div class="bilde">
+                <img src="BILDE/problem-bilde.jpeg" alt="Student som sliter">
+                <p class="bilde_tekst">NOK KUNNSKAP</p>
             </div>
         </article>
     </main>
