--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </p>
                 </div>
                 <div class="bilde">
-                    <img class="pic" src="BILDE/mangel på kjennskap.jpeg" alt="Student som sliter">
+                    <img class="pic" src="BILDE/kjennskap.jpeg" alt="Student som sliter">
                     <p class="bilde_tekst">Student streeset over å finne seg jobb</p>
                 </div>
 
